; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xpc_sn2.c_xpc_get_remote_vars_sn2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xpc_sn2.c_xpc_get_remote_vars_sn2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xpc_vars_sn2 = type { i32 }

@xpVarsNotSet = common dso_local global i32 0, align 4
@XPC_RP_VARS_SIZE = common dso_local global i32 0, align 4
@xpSuccess = common dso_local global i32 0, align 4
@XPC_V_VERSION = common dso_local global i32 0, align 4
@xpBadVersion = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.xpc_vars_sn2*)* @xpc_get_remote_vars_sn2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xpc_get_remote_vars_sn2(i64 %0, %struct.xpc_vars_sn2* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.xpc_vars_sn2*, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store %struct.xpc_vars_sn2* %1, %struct.xpc_vars_sn2** %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @xpVarsNotSet, align 4
  store i32 %10, i32* %3, align 4
  br label %34

11:                                               ; preds = %2
  %12 = load %struct.xpc_vars_sn2*, %struct.xpc_vars_sn2** %5, align 8
  %13 = call i32 @xp_pa(%struct.xpc_vars_sn2* %12)
  %14 = load i64, i64* %4, align 8
  %15 = load i32, i32* @XPC_RP_VARS_SIZE, align 4
  %16 = call i32 @xp_remote_memcpy(i32 %13, i64 %14, i32 %15)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @xpSuccess, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %11
  %21 = load i32, i32* %6, align 4
  store i32 %21, i32* %3, align 4
  br label %34

22:                                               ; preds = %11
  %23 = load %struct.xpc_vars_sn2*, %struct.xpc_vars_sn2** %5, align 8
  %24 = getelementptr inbounds %struct.xpc_vars_sn2, %struct.xpc_vars_sn2* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i64 @XPC_VERSION_MAJOR(i32 %25)
  %27 = load i32, i32* @XPC_V_VERSION, align 4
  %28 = call i64 @XPC_VERSION_MAJOR(i32 %27)
  %29 = icmp ne i64 %26, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %22
  %31 = load i32, i32* @xpBadVersion, align 4
  store i32 %31, i32* %3, align 4
  br label %34

32:                                               ; preds = %22
  %33 = load i32, i32* @xpSuccess, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %32, %30, %20, %9
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @xp_remote_memcpy(i32, i64, i32) #1

declare dso_local i32 @xp_pa(%struct.xpc_vars_sn2*) #1

declare dso_local i64 @XPC_VERSION_MAJOR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
